fix: Update anchor tag styles to make sure links are visibly styled as links

--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,9 @@
     .table{
         @apply w-full border-collapse overflow-x-auto text-black
     }
+    a {
+        @apply text-blue-600 underline;
+    }
 }
 
 
